antlr/stlParser.py
# Generated from stlParser.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class stlParser ( Parser ):

    grammarFileName = "stlParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'-'", "'+'", "'*'", "'/'", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "';'", "':'", "','", "'.'", 
                     "'@'", "'abs'", "'sqrt'", "'exp'", "'pow'", "'s'", 
                     "'ms'", "'us'", "'ns'", "'topic'", "'import'", "'input'", 
                     "'output'", "'internal'", "'const'", "'real'", "'float'", 
                     "'long'", "'complex'", "'int'", "'bool'", "'assertion'", 
                     "'specification'", "'from'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'xor'", "'rise'", 
                     "'fall'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'=='", "'!=='", "'>='", "'<='", "'>'", 
                     "'<'", "'='" ]

    symbolicNames = [ "<INVALID>", "MINUS", "PLUS", "TIMES", "DIVIDE", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
                      "SEMICOLON", "COLON", "COMMA", "DOT", "AT", "ABS", 
                      "SQRT", "EXP", "POW", "SEC", "MSEC", "USEC", "NSEC", 
                      "ROS_Topic", "Import", "Input", "Output", "Internal", 
                      "Constant", "DomainTypeReal", "DomainTypeFloat", "DomainTypeLong", 
                      "DomainTypeComplex", "DomainTypeInt", "DomainTypeBool", 
                      "Assertion", "Specification", "From", "NotOperator", 
                      "OrOperator", "AndOperator", "IffOperator", "ImpliesOperator", 
                      "XorOperator", "RiseOperator", "FallOperator", "AlwaysOperator", 
                      "EventuallyOperator", "UntilOperator", "UnlessOperator", 
                      "HistoricallyOperator", "OnceOperator", "SinceOperator", 
                      "NextOperator", "PreviousOperator", "EqualOperator", 
                      "NotEqualOperator", "GreaterOrEqualOperator", "LesserOrEqualOperator", 
                      "GreaterOperator", "LesserOperator", "EQUAL", "BooleanLiteral", 
                      "TRUE", "FALSE", "IntegerLiteral", "RealLiteral", 
                      "Identifier", "LINE_TERMINATOR", "WHITESPACE", "COMMENT", 
                      "LINE_COMMENT" ]

    RULE_specification_file = 0
    RULE_specification = 1
    RULE_spec = 2
    RULE_modimport = 3
    RULE_assertion = 4
    RULE_declaration = 5
    RULE_annotation = 6
    RULE_annotation_type = 7
    RULE_variableDeclaration = 8
    RULE_constantDeclaration = 9
    RULE_assignment = 10
    RULE_domainType = 11
    RULE_ioType = 12
    RULE_real_expression = 13
    RULE_comparisonOp = 14
    RULE_literal = 15
    RULE_identifier = 16
    RULE_interval = 17
    RULE_intervalTime = 18
    RULE_unit = 19
    RULE_expression = 20

    ruleNames =  [ "specification_file", "specification", "spec", "modimport", 
                   "assertion", "declaration", "annotation", "annotation_type", 
                   "variableDeclaration", "constantDeclaration", "assignment", 
                   "domainType", "ioType", "real_expression", "comparisonOp", 
                   "literal", "identifier", "interval", "intervalTime", 
                   "unit", "expression" ]

    EOF = Token.EOF
    MINUS=1
    PLUS=2
    TIMES=3
    DIVIDE=4
    LPAREN=5
    RPAREN=6
    LBRACE=7
    RBRACE=8
    LBRACK=9
    RBRACK=10
    SEMICOLON=11
    COLON=12
    COMMA=13
    DOT=14
    AT=15
    ABS=16
    SQRT=17
    EXP=18
    POW=19
    SEC=20
    MSEC=21
    USEC=22
    NSEC=23
    ROS_Topic=24
    Import=25
    Input=26
    Output=27
    Internal=28
    Constant=29
    DomainTypeReal=30
    DomainTypeFloat=31
    DomainTypeLong=32
    DomainTypeComplex=33
    DomainTypeInt=34
    DomainTypeBool=35
    Assertion=36
    Specification=37
    From=38
    NotOperator=39
    OrOperator=40
    AndOperator=41
    IffOperator=42
    ImpliesOperator=43
    XorOperator=44
    RiseOperator=45
    FallOperator=46
    AlwaysOperator=47
    EventuallyOperator=48
    UntilOperator=49
    UnlessOperator=50
    HistoricallyOperator=51
    OnceOperator=52
    SinceOperator=53
    NextOperator=54
    PreviousOperator=55
    EqualOperator=56
    NotEqualOperator=57
    GreaterOrEqualOperator=58
    LesserOrEqualOperator=59
    GreaterOperator=60
    LesserOperator=61
    EQUAL=62
    BooleanLiteral=63
    TRUE=64
    FALSE=65
    IntegerLiteral=66
    RealLiteral=67
    Identifier=68
    LINE_TERMINATOR=69
    WHITESPACE=70
    COMMENT=71
    LINE_COMMENT=72

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Specification_fileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def specification(self):
            return self.getTypedRuleContext(stlParser.SpecificationContext,0)


        def EOF(self):
            return self.getToken(stlParser.EOF, 0)

        def getRuleIndex(self):
            return stlParser.RULE_specification_file

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpecification_file" ):
                listener.enterSpecification_file(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpecification_file" ):
                listener.exitSpecification_file(self)




    def specification_file(self):

        localctx = stlParser.Specification_fileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_specification_file)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.specification()
            self.state = 43
            self.match(stlParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SpecificationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def spec(self):
            return self.getTypedRuleContext(stlParser.SpecContext,0)


        def modimport(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(stlParser.ModimportContext)
            else:
                return self.getTypedRuleContext(stlParser.ModimportContext,i)


        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(stlParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(stlParser.DeclarationContext,i)


        def annotation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(stlParser.AnnotationContext)
            else:
                return self.getTypedRuleContext(stlParser.AnnotationContext,i)


        def assertion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(stlParser.AssertionContext)
            else:
                return self.getTypedRuleContext(stlParser.AssertionContext,i)


        def getRuleIndex(self):
            return stlParser.RULE_specification

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpecification" ):
                listener.enterSpecification(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpecification" ):
                listener.exitSpecification(self)




    def specification(self):

        localctx = stlParser.SpecificationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_specification)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==37:
                self.state = 45
                self.spec()


            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==38:
                self.state = 48
                self.modimport()
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 58
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 56
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [26, 27, 29, 31, 32, 33, 34, 68]:
                        self.state = 54
                        self.declaration()
                        pass
                    elif token in [15]:
                        self.state = 55
                        self.annotation()
                        pass
                    else:
                        raise NoViableAltException(self)
             
                self.state = 60
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 62 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 61
                self.assertion()
                self.state = 64 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 61326910307631138) != 0) or ((((_la - 66)) & ~0x3f) == 0 and ((1 << (_la - 66)) & 7) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return stlParser.RULE_spec

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SpecificationIdContext(SpecContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlParser.SpecContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Specification(self):
            return self.getToken(stlParser.Specification, 0)
        def Identifier(self):
            return self.getToken(stlParser.Identifier, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpecificationId" ):
                listener.enterSpecificationId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpecificationId" ):
                listener.exitSpecificationId(self)



    def spec(self):

        localctx = stlParser.SpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_spec)
        try:
            localctx = stlParser.SpecificationIdContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(stlParser.Specification)
            self.state = 67
            self.match(stlParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModimportContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return stlParser.RULE_modimport

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ModImportContext(ModimportContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlParser.ModimportContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def From(self):
            return self.getToken(stlParser.From, 0)
        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(stlParser.Identifier)
            else:
                return self.getToken(stlParser.Identifier, i)
        def Import(self):
            return self.getToken(stlParser.Import, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModImport" ):
                listener.enterModImport(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModImport" ):
                listener.exitModImport(self)



    def modimport(self):

        localctx = stlParser.ModimportContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_modimport)
        try:
            localctx = stlParser.ModImportContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(stlParser.From)
            self.state = 70
            self.match(stlParser.Identifier)
            self.state = 71
            self.match(stlParser.Import)
            self.state = 72
            self.match(stlParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssertionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(stlParser.ExpressionContext,0)


        def Identifier(self):
            return self.getToken(stlParser.Identifier, 0)

        def EQUAL(self):
            return self.getToken(stlParser.EQUAL, 0)

        def getRuleIndex(self):
            return stlParser.RULE_assertion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssertion" ):
                listener.enterAssertion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssertion" ):
                listener.exitAssertion(self)




    def assertion(self):

        localctx = stlParser.AssertionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assertion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 74
                self.match(stlParser.Identifier)
                self.state = 75
                self.match(stlParser.EQUAL)


            self.state = 78
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return stlParser.RULE_declaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DeclVariableContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def variableDeclaration(self):
            return self.getTypedRuleContext(stlParser.VariableDeclarationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclVariable" ):
                listener.enterDeclVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclVariable" ):
                listener.exitDeclVariable(self)


    class DeclConstantContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def constantDeclaration(self):
            return self.getTypedRuleContext(stlParser.ConstantDeclarationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclConstant" ):
                listener.enterDeclConstant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclConstant" ):
                listener.exitDeclConstant(self)



    def declaration(self):

        localctx = stlParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declaration)
        try:
            self.state = 82
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26, 27, 31, 32, 33, 34, 68]:
                localctx = stlParser.DeclVariableContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.variableDeclaration()
                pass
            elif token in [29]:
                localctx = stlParser.DeclConstantContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.constantDeclaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AnnotationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AT(self):
            return self.getToken(stlParser.AT, 0)

        def annotation_type(self):
            return self.getTypedRuleContext(stlParser.Annotation_typeContext,0)


        def getRuleIndex(self):
            return stlParser.RULE_annotation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnnotation" ):
                listener.enterAnnotation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnnotation" ):
                listener.exitAnnotation(self)




    def annotation(self):

        localctx = stlParser.AnnotationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_annotation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(stlParser.AT)
            self.state = 85
            self.annotation_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Annotation_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return stlParser.RULE_annotation_type

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class RosTopicContext(Annotation_typeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlParser.Annotation_typeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ROS_Topic(self):
            return self.getToken(stlParser.ROS_Topic, 0)
        def LPAREN(self):
            return self.getToken(stlParser.LPAREN, 0)
        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(stlParser.Identifier)
            else:
                return self.getToken(stlParser.Identifier, i)
        def COMMA(self):
            return self.getToken(stlParser.COMMA, 0)
        def RPAREN(self):
            return self.getToken(stlParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRosTopic" ):
                listener.enterRosTopic(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRosTopic" ):
                listener.exitRosTopic(self)



    def annotation_type(self):

        localctx = stlParser.Annotation_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_annotation_type)
        try:
            localctx = stlParser.RosTopicContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(stlParser.ROS_Topic)
            self.state = 88
            self.match(stlParser.LPAREN)
            self.state = 89
            self.match(stlParser.Identifier)
            self.state = 90
            self.match(stlParser.COMMA)
            self.state = 91
            self.match(stlParser.Identifier)
            self.state = 92
            self.match(stlParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def domainType(self):
            return self.getTypedRuleContext(stlParser.DomainTypeContext,0)


        def Identifier(self):
            return self.getToken(stlParser.Identifier, 0)

        def ioType(self):
            return self.getTypedRuleContext(stlParser.IoTypeContext,0)


        def assignment(self):
            return self.getTypedRuleContext(stlParser.AssignmentContext,0)


        def getRuleIndex(self):
            return stlParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)




    def variableDeclaration(self):

        localctx = stlParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_variableDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==26 or _la==27:
                self.state = 94
                self.ioType()


            self.state = 97
            self.domainType()
            self.state = 98
            self.match(stlParser.Identifier)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==62:
                self.state = 99
                self.assignment()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Constant(self):
            return self.getToken(stlParser.Constant, 0)

        def domainType(self):
            return self.getTypedRuleContext(stlParser.DomainTypeContext,0)


        def Identifier(self):
            return self.getToken(stlParser.Identifier, 0)

        def EQUAL(self):
            return self.getToken(stlParser.EQUAL, 0)

        def literal(self):
            return self.getTypedRuleContext(stlParser.LiteralContext,0)


        def getRuleIndex(self):
            return stlParser.RULE_constantDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstantDeclaration" ):
                listener.enterConstantDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstantDeclaration" ):
                listener.exitConstantDeclaration(self)




    def constantDeclaration(self):

        localctx = stlParser.ConstantDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_constantDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(stlParser.Constant)
            self.state = 103
            self.domainType()
            self.state = 104
            self.match(stlParser.Identifier)
            self.state = 105
            self.match(stlParser.EQUAL)
            self.state = 106
            self.literal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return stlParser.RULE_assignment

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AsgnExprContext(AssignmentContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlParser.AssignmentContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EQUAL(self):
            return self.getToken(stlParser.EQUAL, 0)
        def expression(self):
            return self.getTypedRuleContext(stlParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsgnExpr" ):
                listener.enterAsgnExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsgnExpr" ):
                listener.exitAsgnExpr(self)


    class AsgnLiteralContext(AssignmentContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlParser.AssignmentContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EQUAL(self):
            return self.getToken(stlParser.EQUAL, 0)
        def literal(self):
            return self.getTypedRuleContext(stlParser.LiteralContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsgnLiteral" ):
                listener.enterAsgnLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsgnLiteral" ):
                listener.exitAsgnLiteral(self)



    def assignment(self):

        localctx = stlParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assignment)
        try:
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                localctx = stlParser.AsgnLiteralContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.match(stlParser.EQUAL)
                self.state = 109
                self.literal()
                pass

            elif la_ == 2:
                localctx = stlParser.AsgnExprContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.match(stlParser.EQUAL)
                self.state = 111
                self.expression(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DomainTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DomainTypeFloat(self):
            return self.getToken(stlParser.DomainTypeFloat, 0)

        def DomainTypeInt(self):
            return self.getToken(stlParser.DomainTypeInt, 0)

        def DomainTypeLong(self):
            return self.getToken(stlParser.DomainTypeLong, 0)

        def DomainTypeComplex(self):
            return self.getToken(stlParser.DomainTypeComplex, 0)

        def Identifier(self):
            return self.getToken(stlParser.Identifier, 0)

        def getRuleIndex(self):
            return stlParser.RULE_domainType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDomainType" ):
                listener.enterDomainType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDomainType" ):
                listener.exitDomainType(self)




    def domainType(self):

        localctx = stlParser.DomainTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_domainType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            _la = self._input.LA(1)
            if not(((((_la - 31)) & ~0x3f) == 0 and ((1 << (_la - 31)) & 137438953487) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IoTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Input(self):
            return self.getToken(stlParser.Input, 0)

        def Output(self):
            return self.getToken(stlParser.Output, 0)

        def getRuleIndex(self):
            return stlParser.RULE_ioType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIoType" ):
                listener.enterIoType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIoType" ):
                listener.exitIoType(self)




    def ioType(self):

        localctx = stlParser.IoTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_ioType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            _la = self._input.LA(1)
            if not(_la==26 or _la==27):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Real_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return stlParser.RULE_real_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ExprSubtractionContext(Real_expressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlParser.Real_expressionContext
            super().__init__(parser)
            self.copyFrom(ctx)
